backend/parser/expr_parser.go
// Code generated from parser/ExprParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // ExprParser
import (
	"fmt"
	"strconv"
  	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}


type ExprParser struct {
	*antlr.BaseParser
}

var ExprParserParserStaticData struct {
  once                   sync.Once
  serializedATN          []int32
  LiteralNames           []string
  SymbolicNames          []string
  RuleNames              []string
  PredictionContextCache *antlr.PredictionContextCache
  atn                    *antlr.ATN
  decisionToDFA          []*antlr.DFA
}

func exprparserParserInit() {
  staticData := &ExprParserParserStaticData
  staticData.LiteralNames = []string{
    "", "", "", "", "", "", "", "", "", "", "'nothing'", "'fraud'", "'cancelled'", 
    "'invalid'", "'alert'", "'conflict'", "'ungraded'", "'obscured'", "'absent'", 
    "'present'", "'excused'", "'toolow'", "", "'=>'", "'?'", "':'", "';'", 
    "','", "'='", "'['", "']'", "'('", "')'", "", "", "'!~'", "'~'", "'+'", 
    "'-'", "'*'", "'/'", "'>'", "'>='", "'!='", "'=='", "'<='", "'<'", "'&&'", 
    "'||'", "'!'",
  }
  staticData.SymbolicNames = []string{
    "", "APPLY", "TO", "WHEN", "EXISTS", "EXPLAIN", "MAX", "MIN", "ROUND", 
    "IN", "CONST_NOTHING", "CONST_FRAUD", "CONST_CANCELLED", "CONST_INVALID", 
    "CONST_ALERT", "COSNT_CONFLICT", "CONST_UNGRADED", "COSNT_OBSCURED", 
    "CONST_ABSENT", "CONST_PRESENT", "CONST_EXCUSED", "CONST_TOOLOW", "IDENTIFIER", 
    "LOP", "ASK", "COLON", "SEMICOLON", "COMMA", "ASSIGN", "LBRACK", "RBRACK", 
    "LPAREN", "RPAREN", "STRING", "REGEX", "NM", "MA", "ADD", "SUB", "MUL", 
    "DIV", "GT", "GE", "NE", "EQ", "LE", "LT", "AND", "OR", "NOT", "FLOAT", 
    "INT", "SPACES",
  }
  staticData.RuleNames = []string{
    "algorithm", "apply", "normal_operation", "when_operation", "function", 
    "constant", "constantList", "lambda", "list", "expression", "assignmentExpression", 
    "iterateExpression", "conditionalExpression", "logicalOrExpression", 
    "logicalAndExpression", "equalityExpression", "relationalExpression", 
    "regexExpression", "additiveExpression", "multiplicativeExpression", 
    "unaryExpression", "functionCall",
  }
  staticData.PredictionContextCache = antlr.NewPredictionContextCache()
  deserializer := antlr.NewATNDeserializer(nil)
  staticData.atn = deserializer.Deserialize(staticData.serializedATN)
  atn := staticData.atn
  staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
  decisionToDFA := staticData.decisionToDFA
  for index, state := range atn.DecisionToState {
    decisionToDFA[index] = antlr.NewDFA(state, index)
  }
}

// ExprParserInit initializes any static state used to implement ExprParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewExprParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ExprParserInit() {
  staticData := &ExprParserParserStaticData
  staticData.once.Do(exprparserParserInit)
}

// NewExprParser produces a new parser instance for the optional input antlr.TokenStream.
func NewExprParser(input antlr.TokenStream) *ExprParser {
	ExprParserInit()
	this := new(ExprParser)
	this.BaseParser = antlr.NewBaseParser(input)
  staticData := &ExprParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ExprParser.g4"

	return this
}


// ExprParser tokens.
const (
	ExprParserEOF = antlr.TokenEOF
	ExprParserAPPLY = 1
	ExprParserTO = 2
	ExprParserWHEN = 3
	ExprParserEXISTS = 4
	ExprParserEXPLAIN = 5
	ExprParserMAX = 6
	ExprParserMIN = 7
	ExprParserROUND = 8
	ExprParserIN = 9
	ExprParserCONST_NOTHING = 10
	ExprParserCONST_FRAUD = 11
	ExprParserCONST_CANCELLED = 12
	ExprParserCONST_INVALID = 13
	ExprParserCONST_ALERT = 14
	ExprParserCOSNT_CONFLICT = 15
	ExprParserCONST_UNGRADED = 16
	ExprParserCOSNT_OBSCURED = 17
	ExprParserCONST_ABSENT = 18
	ExprParserCONST_PRESENT = 19
	ExprParserCONST_EXCUSED = 20
	ExprParserCONST_TOOLOW = 21
	ExprParserIDENTIFIER = 22
	ExprParserLOP = 23
	ExprParserASK = 24
	ExprParserCOLON = 25
	ExprParserSEMICOLON = 26
	ExprParserCOMMA = 27
	ExprParserASSIGN = 28
	ExprParserLBRACK = 29
	ExprParserRBRACK = 30
	ExprParserLPAREN = 31
	ExprParserRPAREN = 32
	ExprParserSTRING = 33
	ExprParserREGEX = 34
	ExprParserNM = 35
	ExprParserMA = 36
	ExprParserADD = 37
	ExprParserSUB = 38
	ExprParserMUL = 39
	ExprParserDIV = 40
	ExprParserGT = 41
	ExprParserGE = 42
	ExprParserNE = 43
	ExprParserEQ = 44
	ExprParserLE = 45
	ExprParserLT = 46
	ExprParserAND = 47
	ExprParserOR = 48
	ExprParserNOT = 49
	ExprParserFLOAT = 50
	ExprParserINT = 51
	ExprParserSPACES = 52
)

// ExprParser rules.
const (
	ExprParserRULE_algorithm = 0
	ExprParserRULE_apply = 1
	ExprParserRULE_normal_operation = 2
	ExprParserRULE_when_operation = 3
	ExprParserRULE_function = 4
	ExprParserRULE_constant = 5
	ExprParserRULE_constantList = 6
	ExprParserRULE_lambda = 7
	ExprParserRULE_list = 8
	ExprParserRULE_expression = 9
	ExprParserRULE_assignmentExpression = 10
	ExprParserRULE_iterateExpression = 11
	ExprParserRULE_conditionalExpression = 12
	ExprParserRULE_logicalOrExpression = 13
	ExprParserRULE_logicalAndExpression = 14
	ExprParserRULE_equalityExpression = 15
	ExprParserRULE_relationalExpression = 16
	ExprParserRULE_regexExpression = 17
	ExprParserRULE_additiveExpression = 18
	ExprParserRULE_multiplicativeExpression = 19
	ExprParserRULE_unaryExpression = 20
	ExprParserRULE_functionCall = 21
)

// IAlgorithmContext is an interface to support dynamic dispatch.
type IAlgorithmContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllApply() []IApplyContext
	Apply(i int) IApplyContext
	AllNormal_operation() []INormal_operationContext
	Normal_operation(i int) INormal_operationContext
	AllWhen_operation() []IWhen_operationContext
	When_operation(i int) IWhen_operationContext

	// IsAlgorithmContext differentiates from other interfaces.
	IsAlgorithmContext()
}

type AlgorithmContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAlgorithmContext() *AlgorithmContext {
	var p = new(AlgorithmContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_algorithm
	return p
}

func InitEmptyAlgorithmContext(p *AlgorithmContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_algorithm
}

func (*AlgorithmContext) IsAlgorithmContext() {}

func NewAlgorithmContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AlgorithmContext {
	var p = new(AlgorithmContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_algorithm

	return p
}

func (s *AlgorithmContext) GetParser() antlr.Parser { return s.parser }

func (s *AlgorithmContext) EOF() antlr.TerminalNode {
	return s.GetToken(ExprParserEOF, 0)
}

func (s *AlgorithmContext) AllApply() []IApplyContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IApplyContext); ok {
			len++
		}
	}

	tst := make([]IApplyContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IApplyContext); ok {
			tst[i] = t.(IApplyContext)
			i++
		}
	}

	return tst
}

func (s *AlgorithmContext) Apply(i int) IApplyContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IApplyContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IApplyContext)
}

func (s *AlgorithmContext) AllNormal_operation() []INormal_operationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INormal_operationContext); ok {
			len++
		}
	}

	tst := make([]INormal_operationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INormal_operationContext); ok {
			tst[i] = t.(INormal_operationContext)
			i++
		}
	}

	return tst
}

func (s *AlgorithmContext) Normal_operation(i int) INormal_operationContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INormal_operationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INormal_operationContext)
}

func (s *AlgorithmContext) AllWhen_operation() []IWhen_operationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IWhen_operationContext); ok {
			len++
		}
	}

	tst := make([]IWhen_operationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IWhen_operationContext); ok {
			tst[i] = t.(IWhen_operationContext)
			i++
		}
	}

	return tst
}

func (s *AlgorithmContext) When_operation(i int) IWhen_operationContext {
	var t antlr.RuleContext;
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IWhen_operationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext);
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IWhen_operationContext)
}

func (s *AlgorithmContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AlgorithmContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *AlgorithmContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterAlgorithm(s)
	}
}

func (s *AlgorithmContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitAlgorithm(s)
	}
}

func (s *AlgorithmContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitAlgorithm(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *ExprParser) Algorithm() (localctx IAlgorithmContext) {
	localctx = NewAlgorithmContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ExprParserRULE_algorithm)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	for ((int64(_la) & ^0x3f) == 0 && ((int64(1) << _la) & 3940952477531626) != 0) {
		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case ExprParserAPPLY:
			{
				p.SetState(44)
				p.Apply()
			}


		case ExprParserEXPLAIN, ExprParserMAX, ExprParserMIN, ExprParserROUND, ExprParserCONST_NOTHING, ExprParserCONST_FRAUD, ExprParserCONST_CANCELLED, ExprParserCONST_INVALID, ExprParserCONST_ALERT, ExprParserCOSNT_CONFLICT, ExprParserCONST_UNGRADED, ExprParserCOSNT_OBSCURED, ExprParserCONST_ABSENT, ExprParserCONST_PRESENT, ExprParserCONST_EXCUSED, ExprParserCONST_TOOLOW, ExprParserIDENTIFIER, ExprParserLPAREN, ExprParserSTRING, ExprParserREGEX, ExprParserSUB, ExprParserNOT, ExprParserFLOAT, ExprParserINT:
			{
				p.SetState(45)
				p.Normal_operation()
			}


		case ExprParserWHEN:
			{
				p.SetState(46)
				p.When_operation()
			}



		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(51)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
	    	goto errorExit
	    }
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(52)
		p.Match(ExprParserEOF)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IApplyContext is an interface to support dynamic dispatch.
type IApplyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	APPLY() antlr.TerminalNode
	Lambda() ILambdaContext
	TO() antlr.TerminalNode
	List() IListContext
	SEMICOLON() antlr.TerminalNode

	// IsApplyContext differentiates from other interfaces.
	IsApplyContext()
}

type ApplyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyApplyContext() *ApplyContext {
	var p = new(ApplyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_apply
	return p
}

func InitEmptyApplyContext(p *ApplyContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_apply
}

func (*ApplyContext) IsApplyContext() {}

func NewApplyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ApplyContext {
	var p = new(ApplyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_apply

	return p
}

func (s *ApplyContext) GetParser() antlr.Parser { return s.parser }

func (s *ApplyContext) APPLY() antlr.TerminalNode {
	return s.GetToken(ExprParserAPPLY, 0)
}

func (s *ApplyContext) Lambda() ILambdaContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILambdaContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILambdaContext)
}

func (s *ApplyContext) TO() antlr.TerminalNode {
	return s.GetToken(ExprParserTO, 0)
}

func (s *ApplyContext) List() IListContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IListContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IListContext)
}

func (s *ApplyContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ExprParserSEMICOLON, 0)
}

func (s *ApplyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ApplyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ApplyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterApply(s)
	}
}

func (s *ApplyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitApply(s)
	}
}

func (s *ApplyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitApply(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *ExprParser) Apply() (localctx IApplyContext) {
	localctx = NewApplyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ExprParserRULE_apply)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Match(ExprParserAPPLY)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(55)
		p.Lambda()
	}
	{
		p.SetState(56)
		p.Match(ExprParserTO)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(57)
		p.List()
	}
	{
		p.SetState(58)
		p.Match(ExprParserSEMICOLON)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// INormal_operationContext is an interface to support dynamic dispatch.
type INormal_operationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expression() IExpressionContext
	SEMICOLON() antlr.TerminalNode
	EXPLAIN() antlr.TerminalNode
	COMMA() antlr.TerminalNode
	STRING() antlr.TerminalNode

	// IsNormal_operationContext differentiates from other interfaces.
	IsNormal_operationContext()
}

type Normal_operationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNormal_operationContext() *Normal_operationContext {
	var p = new(Normal_operationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_normal_operation
	return p
}

func InitEmptyNormal_operationContext(p *Normal_operationContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_normal_operation
}

func (*Normal_operationContext) IsNormal_operationContext() {}

func NewNormal_operationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Normal_operationContext {
	var p = new(Normal_operationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_normal_operation

	return p
}

func (s *Normal_operationContext) GetParser() antlr.Parser { return s.parser }

func (s *Normal_operationContext) Expression() IExpressionContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *Normal_operationContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(ExprParserSEMICOLON, 0)
}

func (s *Normal_operationContext) EXPLAIN() antlr.TerminalNode {
	return s.GetToken(ExprParserEXPLAIN, 0)
}

func (s *Normal_operationContext) COMMA() antlr.TerminalNode {
	return s.GetToken(ExprParserCOMMA, 0)
}

func (s *Normal_operationContext) STRING() antlr.TerminalNode {
	return s.GetToken(ExprParserSTRING, 0)
}

func (s *Normal_operationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Normal_operationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *Normal_operationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterNormal_operation(s)
	}
}

func (s *Normal_operationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitNormal_operation(s)
	}
}

func (s *Normal_operationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitNormal_operation(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *ExprParser) Normal_operation() (localctx INormal_operationContext) {
	localctx = NewNormal_operationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ExprParserRULE_normal_operation)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	if _la == ExprParserEXPLAIN {
		{
			p.SetState(60)
			p.Match(ExprParserEXPLAIN)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}

	}
	{
		p.SetState(63)
		p.Expression()
	}
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)


	if _la == ExprParserCOMMA {
		{
			p.SetState(64)
			p.Match(ExprParserCOMMA)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}
		{
			p.SetState(65)
			p.Match(ExprParserSTRING)
			if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
			}
		}

	}
	{
		p.SetState(68)
		p.Match(ExprParserSEMICOLON)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IWhen_operationContext is an interface to support dynamic dispatch.
type IWhen_operationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	WHEN() antlr.TerminalNode
	List() IListContext
	EXISTS() antlr.TerminalNode
	Normal_operation() INormal_operationContext

	// IsWhen_operationContext differentiates from other interfaces.
	IsWhen_operationContext()
}

type When_operationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWhen_operationContext() *When_operationContext {
	var p = new(When_operationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_when_operation
	return p
}

func InitEmptyWhen_operationContext(p *When_operationContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_when_operation
}

func (*When_operationContext) IsWhen_operationContext() {}

func NewWhen_operationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *When_operationContext {
	var p = new(When_operationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_when_operation

	return p
}

func (s *When_operationContext) GetParser() antlr.Parser { return s.parser }

func (s *When_operationContext) WHEN() antlr.TerminalNode {
	return s.GetToken(ExprParserWHEN, 0)
}

func (s *When_operationContext) List() IListContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IListContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IListContext)
}

func (s *When_operationContext) EXISTS() antlr.TerminalNode {
	return s.GetToken(ExprParserEXISTS, 0)
}

func (s *When_operationContext) Normal_operation() INormal_operationContext {
	var t antlr.RuleContext;
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INormal_operationContext); ok {
			t = ctx.(antlr.RuleContext);
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INormal_operationContext)
}

func (s *When_operationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *When_operationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *When_operationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterWhen_operation(s)
	}
}

func (s *When_operationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitWhen_operation(s)
	}
}

func (s *When_operationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitWhen_operation(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *ExprParser) When_operation() (localctx IWhen_operationContext) {
	localctx = NewWhen_operationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ExprParserRULE_when_operation)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Match(ExprParserWHEN)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(71)
		p.List()
	}
	{
		p.SetState(72)
		p.Match(ExprParserEXISTS)
		if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
		}
	}
	{
		p.SetState(73)
		p.Normal_operation()
	}



errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}


// IFunctionContext is an interface to support dynamic dispatch.
type IFunctionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MAX() antlr.TerminalNode
	MIN() antlr.TerminalNode
	ROUND() antlr.TerminalNode

	// IsFunctionContext differentiates from other interfaces.
	IsFunctionContext()
}

type FunctionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctionContext() *FunctionContext {
	var p = new(FunctionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_function
	return p
}

func InitEmptyFunctionContext(p *FunctionContext)  {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ExprParserRULE_function
}

func (*FunctionContext) IsFunctionContext() {}

func NewFunctionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionContext {
	var p = new(FunctionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExprParserRULE_function

	return p
}

func (s *FunctionContext) GetParser() antlr.Parser { return s.parser }

func (s *FunctionContext) MAX() antlr.TerminalNode {
	return s.GetToken(ExprParserMAX, 0)
}

func (s *FunctionContext) MIN() antlr.TerminalNode {
	return s.GetToken(ExprParserMIN, 0)
}

func (s *FunctionContext) ROUND() antlr.TerminalNode {
	return s.GetToken(ExprParserROUND, 0)
}

func (s *FunctionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *FunctionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.EnterFunction(s)
	}
}

func (s *FunctionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExprParserListener); ok {
		listenerT.ExitFunction(s)
	}
}

func (s *FunctionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExprParserVisitor:
		return t.VisitFunction(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *ExprParser) Function() (localctx IFunctionContext) {
	localctx = NewFunctionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ExprParserRULE_function)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(75)
		_la = p.GetTokenStream().LA(1)
